create groups + send in group chats